--- a/createpost.html
+++ b/createpost.html
@@ -14,12 +14,12 @@
 
 <body style="background-color: #FFF2F2;">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand m-0 fw-bold" href="index.html">Presh Blog</a>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand m-0 fw-bold" href="index.html">CHULELA Blog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,12 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link active fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
-
+    
                         <li class="nav-item ">
                             <a class="nav-link text-dark fw-bold" href="view.html">VIEW POST</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark fw-bold" href="post.html">POST</a>
+                            <a class="nav-link text-dark fw-bold" href="createpost.html">POST</a>
                         </li>
                     </ul>
                 </div>
@@ -41,10 +41,10 @@
     </header>
 
     <div class="container pt-4">
-        <h1>Create a Post</h1>
+        <h1 class="mt-5">Create a Post</h1>
         <div class="row">
             <div class="col-lg-6 form-img">
-                <h1 class="text-center form-img-text text-light">Create a new post about Chulela's krib</h1>
+                <h1 class="text-center form-img-text text-light pt-5">Create a new post about Chulela's krib</h1>
             </div>
             <div class="col-lg-6 outer-body pe-0">
                 <div class="form-body h-100">
@@ -77,7 +77,7 @@
                                 cupiditate laborum,
                                 soluta debitis iure dolore iusto adipisci optio ipsam, sint amet dolorem possimus
                                 voluptatum. Voluptate cumque possimus autem alias maiores.</p>
-                            <div class="d-flex justify-content-between">
+                            <div class="d-flex justify-content-between others">
                                 <a href="view.html" class="btn btn-primary">View Post</a>
                                 <button class="btn btn-primary">Update</button>
                                 <button class="btn btn-danger">Delete</button>
@@ -92,28 +92,27 @@
     <footer class="bg-secondary">
         <div class="container d-flex justify-content-between pt-3">
             <div>
-                <p class="text-black fw-bold">@Presh Blog
-                    <br> Home of quality contents
+                <p class="text-black fw-bold">Chulela krib</p>
+                <br> Home of quality travel content
                 </p>
             </div>
             <div class="text-center">
                 <ul class="list-unstyled d-flex justify-content-center">
-                    <li> <a href="https://www.facebook.com/ikpa.precious"> <i
+                    <li> <a href="https://www.facebook.com/nsamc"> <i
                                 class="bi bi-facebook text-black ms-3"></i></a></li>
-                    <li> <a href="https://twitter.com/PreciousIkpa"> <i class="bi bi-twitter text-black ms-3"></i></a>
+                    <li> <a href="https://twitter.com/_nsamc"> <i class="bi bi-twitter text-black ms-3"></i></a>
                     </li>
-                    <li> <a href="https://www.linkedin.com/in/ikpa-precious-475675166/"> <i
+                    <li> <a href="https://www.linkedin.com/in/samuel-nduka-gmnse-639a4abb/"> <i
                                 class="bi bi-linkedin text-black ms-3"></i></a></li>
-                    <li> <a href="https://github.com/Masterprecie"> <i class="bi bi-github text-black ms-3"></i></a>
+                    <li> <a href="https://github.com/ndukasamuel"> <i class="bi bi-github text-black ms-3"></i></a>
                     </li>
                 </ul>
             </div>
             <div>
-                <p>Designed by Ikpa Precious </p>
+                <p>Designed by Nduka Samuel</p>
             </div>
-
         </div>
-
+    
     </footer>
 
 
