--- a/index.html
+++ b/index.html
@@ -58,31 +58,30 @@
     </main>
 
 
-    <footer class="bg-secondary">
-        <div class="container d-flex justify-content-between pt-3">
-            <div>
-                <p class="text-black fw-bold">Chulela krib</p>
+        <footer class="bg-secondary">
+            <div class="container d-flex justify-content-between pt-3">
+                <div>
+                    <p class="text-black fw-bold">Chulela krib</p>
                     <br> Home of quality travel content
-                </p>
+                    </p>
+                </div>
+                <div class="text-center">
+                    <ul class="list-unstyled d-flex justify-content-center">
+                        <li> <a href="https://www.facebook.com/nsamc"> <i class="bi bi-facebook text-black ms-3"></i></a></li>
+                        <li> <a href="https://twitter.com/_nsamc"> <i class="bi bi-twitter text-black ms-3"></i></a>
+                        </li>
+                        <li> <a href="https://www.linkedin.com/in/samuel-nduka-gmnse-639a4abb/"> <i
+                                    class="bi bi-linkedin text-black ms-3"></i></a></li>
+                        <li> <a href="https://github.com/ndukasamuel"> <i class="bi bi-github text-black ms-3"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <p>Designed by Nduka Samuel</p>
+                </div>
             </div>
-            <div class="text-center">
-                <ul class="list-unstyled d-flex justify-content-center">
-                    <li> <a href="https://www.facebook.com/ikpa.precious"> <i
-                                class="bi bi-facebook text-black ms-3"></i></a></li>
-                    <li> <a href="https://twitter.com/PreciousIkpa"> <i class="bi bi-twitter text-black ms-3"></i></a>
-                    </li>
-                    <li> <a href="https://www.linkedin.com/in/ikpa-precious-475675166/"> <i
-                                class="bi bi-linkedin text-black ms-3"></i></a></li>
-                    <li> <a href="https://github.com/Masterprecie"> <i class="bi bi-github text-black ms-3"></i></a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <p>Designed by Nduka Samuel</p>
-            </div>
-        </div>
-
-    </footer>
+        
+        </footer>
 
 
 
